# RTinternational

./: .gitignore  AGENTS.md  Dockerfile  README.md  VERCEL_DEPLOYMENT.md  VERCEL_FIX_SUMMARY.md  _check_all.py  _check_db.py  _check_scheduled.py  callcenter.db  check_vercel.py  docker-compose.prod.yml  docker-compose.yml  find_testsprite_cli.py  migrate_attendance_columns.py  parse_cli_cmd.py  parse_config_wait.py  parse_generate_code_actual.py  parse_generate_code_and_execute.py  parse_latest_mcp_log.py  parse_mcp_dist.py  parse_mcp_errors.py  parse_mcp_flow.py  parse_mcp_flow2.py  parse_mcp_info.py  parse_mcp_log.py  parse_mcp_methods.py  parse_mcp_network.py  parse_mcp_ports.py  parse_mcp_status.py  parse_transcript.py  print_latest_mcp_log.py  print_log_head.py  print_log_more.py  pyproject.toml  requirements.txt  search_generate_code_fn.py  test_pdf.py  test_xhtml2pdf.py  vercel.json
.github/workflows/: ci.yml  warm.yml
CallCenterAPI_FastAPI/: .env.example  add_column.py  callcenter.db  check_login.py  check_tables.py  database.py  logo_base64.txt  main.py  migration_script.py  models.py  requirements.txt  restore_usman.py  schema_sqlserver.sql  schemas.py  start_test_server.py  test_cohere3.py  test_extract.py  test_gemini.py
CallCenterAPI_FastAPI/middleware/: security.py
CallCenterAPI_FastAPI/routers/: __init__.py  admin.py  ai_router.py  (+12 more)
api/: api.py
backend-api/: .vercelignore  requirements.txt
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
security/: AUDIT_SUMMARY.md
testsprite_tests/: run_backend_tests.py
(+212 files in other folders)
