[project]
name = "rt-international"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.3",
    "python-multipart>=0.0.19",
    "bcrypt>=4.2.1",
    "pyjwt>=2.10.1",
    "pg8000>=1.31.2,<2.0",
    "openai>=2.0.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.1.0",
]

# Vercel uses api/index.py as the serverless function entry point
